position fixes icons, adds correct z-index

--- a/assets/css/desktop.css
+++ b/assets/css/desktop.css
@@ -38,8 +38,8 @@ Things to remember:
 		position: fixed;
 		/* right: -123; */
 		top: -20;
-		z-index: -1;
-		background-color: white;
+		z-index: 3;
+		background-color: transparent;
 }
 }
 
