--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -159,9 +159,9 @@ ul {
 }
 
 #headerText {
-	position: relative;
+	position: inherit;
 	top: 7px;
-	left: 5px;
+	left: 42px;
 	color: rgb(196, 205, 214);
 }
 
@@ -172,7 +172,6 @@ ul {
 .top_nav {
 	width: 100%;
 	height: 35px;
-	position: fixed;
 	color: #daeafd;
 	z-index: 2;
 
@@ -183,13 +182,18 @@ ul {
 }
 
 #top_nav_left {
-float: left;
+position: fixed;
+top: 0;
+left: 0;
 padding: 0 0 0 5px;
 }
 
 #top_nav_right{
-	float:right;
-	padding: 6px 8px 0 0;	
+	position: fixed;
+	top: 0;
+	right: 0;
+	padding: 6px 8px 0 0;
+	z-index: 6;	
 }
 
 #video_background {
